--- a/spotify_data_analysis.ipynb
+++ b/spotify_data_analysis.ipynb
@@ -524,6 +524,7 @@
     }
    ],
    "source": [
+    "# let's make sure our new column looks right\n",
     "df.head(10)"
    ]
   },
@@ -552,6 +553,7 @@
     }
    ],
    "source": [
+    "# ...and it's a float, that's good.\n",
     "df.info()"
    ]
   },
@@ -584,6 +586,7 @@
     }
    ],
    "source": [
+    "# let's plot it out with total minutes played over time\n",
     "plt.figure(figsize=(12,4))\n",
     "sns.lineplot(x='endTime',y='min_played',data=df)"
    ]
